<resources>
    <string name="app_name">FruitLite</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="socialmedia">Social Media</string>
    <string name="LoginGagal">Login Gagal</string>
    <string name="editprofile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="instagram">Instagram: </string>
    <string name="twitter">Twitter: </string>
    <string name="facebook">Facebook: </string>
    <string name="editinstagram">Instagram </string>
    <string name="edittwitter">Twitter </string>
    <string name="editfacebook">Facebook </string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addItemButton">Add Item</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="AboutDesc">A scan feature is a feature where user can scan a QR Code or a barcode. When user open the scan feature, it will open the camera and you can scan your QR Code or barcode with your phone. This is one of the futuristic feature that get this app one step further.</string>
    <string name="about">About</string>
    <string name="PlaceCode">Place the code within the frame</string>
    <string name="fruit_detail">Fruit Detail</string>
    <string name="fruit_name">Fruit Name</string>
    <string name="fruit_desription">Fruit Desription</string>
    <string name="nama">Nama</string>
    <string name="jalan_kemanggisan">Jalan Kemanggisan</string>
    <string name="hp">087664682345</string>
    <string name="instagramm">Instagram</string>
    <string name="twitterr">Twitter</string>
    <string name="facebookk">Facebook</string>
</resources>