<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@color/light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/text"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:textSize="45dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/editTextName"
        android:inputType="text"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_box"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/editTextEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_box"
        android:padding="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="270dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        android:textColorHint="@color/black">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:id="@+id/editTextPassword"
            android:hint="@string/password"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_box"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="270dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey"
        android:textColorHint="@color/black">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:id="@+id/editConfirmPassword"
            android:hint="@string/confirmpassword"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_box"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/buttonSubmit"
        android:layout_below="@+id/radioLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:backgroundTint="@color/blue"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/buttonToLogin"
        android:layout_below="@+id/radioLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/Login"
        android:backgroundTint="@color/blue"
        />
</LinearLayout>