<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FruitDetail"
    android:background="#c6e2ff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fruit_detail"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/apple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fruit_name"
                android:id="@+id/detailName"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="420dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fruit_desription"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="470dp"
                android:textSize="20sp"
                android:id="@+id/detailDescription"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>